--- a/spec/requests/apiary/3_tube_resource/4_update_a_tube.json.erb
+++ b/spec/requests/apiary/3_tube_resource/4_update_a_tube.json.erb
@@ -18,6 +18,13 @@ h[:parameters]=<<EOP
 EOP
 h[:status]=200
 h[:response_header] << 'Content-Type: application/json'
+h[:setup]=<<EOD
+sample = Lims::Core::Laboratory::Sample.new(:name => 'sample 1')
+tube = Lims::Core::Laboratory::Tube.new << Lims::Core::Laboratory::Aliquot.new(:quantity => 10, :type => "DNA", :sample => sample)
+
+save_with_uuid sample => [1,2,3,4,6], tube => [1,2,3,4,5]
+EOD
+
 h[:response]=<<EOD
 {
     "tube": {
