[fix #45696325] Fix failing specs - added setup section
Using the latest lims-core (1.4) some of the
original specs is still failing.
Maybe a rebase needed.

--- a/spec/requests/apiary/2_root.json.erb
+++ b/spec/requests/apiary/2_root.json.erb
@@ -119,6 +119,14 @@ h[:response]=<<EOD
              "last": "http://example.org/sanger_barcodes/page=-1"
            }
          },
+         "ean13_barcodes": {
+           "actions": {
+             "create": "http://example.org/ean13_barcodes",
+             "read": "http://example.org/ean13_barcodes",
+             "first": "http://example.org/ean13_barcodes/page=1",
+             "last": "http://example.org/ean13_barcodes/page=-1"
+           }
+         },
          "barcode2_ds": {
            "actions": {
              "create": "http://example.org/barcode2_ds",
