--- a/spec/requests/apiary/5_spin_column_resource/2_create_a_new_empty_spin_column.json.erb
+++ b/spec/requests/apiary/5_spin_column_resource/2_create_a_new_empty_spin_column.json.erb
@@ -13,7 +13,7 @@ EOD
 h[:status]=200
 h[:response_header] << 'Content-Type: application/json'
 h[:response]=<<EOD
-{ "spin_columns": {
+{ "spin_column": {
     "actions": {
         "read": "/11111111-2222-3333-4444-555555555555",
         "create": "/11111111-2222-3333-4444-555555555555",
