--- a/spec/requests/apiary/6_plate_resource/5_transfer_content_from_a_source_plate_to_a_target_plate.json.erb
+++ b/spec/requests/apiary/6_plate_resource/5_transfer_content_from_a_source_plate_to_a_target_plate.json.erb
@@ -13,6 +13,17 @@ EOD
 h[:method] = "POST"
 h[:url]='/actions/plate_transfer'
 h[:header] << 'Accept: application/json'
+h[:setup]=<<EOD
+sample1 = Lims::Core::Laboratory::Sample.new(:name => 'sample 1')
+plate1 = Lims::Core::Laboratory::Plate.new(:number_of_rows => 8,
+                                :number_of_columns => 12,
+                                :type => "source plate type")
+plate1["C5"] << Lims::Core::Laboratory::Aliquot.new(:quantity => 10, :type => "new type", :sample => sample1)
+plate2 = Lims::Core::Laboratory::Plate.new(:number_of_rows => 8,
+                                :number_of_columns => 12,
+                                :type => "target plate type")
+save_with_uuid sample1 => [1,2,3,4,7], plate1 => [1,2,3,4,5], plate2 => [1,2,3,4,6]
+EOD
 h[:parameters]=<<EOD
 { "plate_transfer": {
     "source_uuid": "11111111-2222-3333-4444-555555555555",
@@ -53,7 +64,6 @@ h[:response]=<<EOD
                         },
                     "uuid": "11111111-2222-3333-4444-777777777777",
                     "name": "sample 1"},
-                    "quantity": 10,
                     "type": "new type",
                     "unit": "mole"
                 } ], 
@@ -93,7 +103,7 @@ h[:response]=<<EOD
                         },
                     "uuid": "11111111-2222-3333-4444-777777777777",
                     "name": "sample 1"},
-                    "quantity": 0,
+                    "quantity": 10,
                     "type": "new type",
                     "unit": "mole"
                 } ], 
@@ -131,7 +141,6 @@ h[:response]=<<EOD
                         },
                     "uuid": "11111111-2222-3333-4444-777777777777",
                     "name": "sample 1"},
-                    "quantity": 10,
                     "type": "new type",
                     "unit": "mole"
                 } ], 
@@ -145,7 +154,8 @@ h[:response]=<<EOD
             }
         }
     },
-    "transfer_map": { "C5": "B2" }
+    "transfer_map": { "C5": "B2" },
+    "aliquot_type": "new type"
 }}
 EOD
 %>
