--- a/spec/requests/apiary/3_tube_resource/6_tranfer_the_content_from_multiples_tubes_to_multiples_tubes.json.erb
+++ b/spec/requests/apiary/3_tube_resource/6_tranfer_the_content_from_multiples_tubes_to_multiples_tubes.json.erb
@@ -21,6 +21,16 @@ EOD
 h[:method] = "POST"
 h[:url]='/actions/transfer_tubes_to_tubes'
 h[:header] << 'Accept: application/json'
+h[:setup]=<<EOD
+sample1 = Lims::Core::Laboratory::Sample.new(:name => 'sample 1')
+sample2 = Lims::Core::Laboratory::Sample.new(:name => 'sample 2')
+source_tube1 = Lims::Core::Laboratory::Tube.new << Lims::Core::Laboratory::Aliquot.new(:quantity => 10, :type => "RNA", :sample => sample1)
+source_tube2 = Lims::Core::Laboratory::Tube.new << Lims::Core::Laboratory::Aliquot.new(:quantity => 10, :type => "RNA", :sample => sample2)
+target_tube1 = Lims::Core::Laboratory::Tube.new
+target_tube2 = Lims::Core::Laboratory::Tube.new
+
+save_with_uuid sample1 => [1,2,3,0,0], sample2 => [1,2,3,0,1], source_tube1 => [1,2,3,4,5], source_tube2 => [1,2,3,4,7], target_tube1 => [1,2,3,4,6], target_tube2 => [1,2,3,4,8]
+EOD
 h[:parameters]=<<EOD
 { "transfer_tubes_to_tubes": { 
     "transfers": [
@@ -44,8 +54,8 @@ h[:response_header] << 'Content-Type: application/json'
 h[:response]=<<EOD
 { "transfer_tubes_to_tubes": {
     "actions": {},
-    "user": "user 1",
-    "application": "application 1",
+    "user": "user",
+    "application": "application",
     "result": {
         "sources": [
             { "tube": {
@@ -69,41 +79,12 @@ h[:response]=<<EOD
                         "uuid": "11111111-2222-3333-0000-000000000000",
                         "name": "sample 1"
                     },
-                    "quantity": 5,
-                    "type": "DNA",
+                    "quantity": 10,
+                    "type": "RNA",
                     "unit": "mole"
                     }
                 ]
             }},
-            { "tube": {
-                "actions": {
-                    "read": "/11111111-2222-3333-4444-666666666666",
-                    "create": "/11111111-2222-3333-4444-666666666666",
-                    "update": "/11111111-2222-3333-4444-666666666666",
-                    "delete": "/11111111-2222-3333-4444-666666666666"
-                },
-                "uuid": "11111111-2222-3333-4444-666666666666",
-                "type": null,
-                "max_volume": null,
-                "aliquots": [
-                    { "sample": {
-                        "actions": {
-                            "read": "/11111111-2222-3333-0000-000000111111",
-                            "create": "/11111111-2222-3333-0000-000000111111",
-                            "update": "/11111111-2222-3333-0000-000000111111",
-                            "delete": "/11111111-2222-3333-0000-000000111111"
-                        },
-                        "uuid": "11111111-2222-3333-0000-000000111111",
-                        "name": "sample 1"
-                    },
-                    "quantity": 5,
-                    "type": "DNA",
-                    "unit": "mole"
-                    }
-                ]
-            }}
-        ],
-        "targets": [
             { "tube": {
                 "actions": {
                     "read": "/11111111-2222-3333-4444-777777777777",
@@ -117,6 +98,35 @@ h[:response]=<<EOD
                 "aliquots": [
                     { "sample": {
                         "actions": {
+                            "read": "/11111111-2222-3333-0000-111111111111",
+                            "create": "/11111111-2222-3333-0000-111111111111",
+                            "update": "/11111111-2222-3333-0000-111111111111",
+                            "delete": "/11111111-2222-3333-0000-111111111111"
+                        },
+                        "uuid": "11111111-2222-3333-0000-111111111111",
+                        "name": "sample 2"
+                    },
+                    "quantity": 10,
+                    "type": "RNA",
+                    "unit": "mole"
+                    }
+                ]
+            }}
+        ],
+        "targets": [
+            { "tube": {
+                "actions": {
+                    "read": "/11111111-2222-3333-4444-666666666666",
+                    "create": "/11111111-2222-3333-4444-666666666666",
+                    "update": "/11111111-2222-3333-4444-666666666666",
+                    "delete": "/11111111-2222-3333-4444-666666666666"
+                },
+                "uuid": "11111111-2222-3333-4444-666666666666",
+                "type": null,
+                "max_volume": null,
+                "aliquots": [
+                    { "sample": {
+                        "actions": {
                             "read": "/11111111-2222-3333-0000-000000000000",
                             "create": "/11111111-2222-3333-0000-000000000000",
                             "update": "/11111111-2222-3333-0000-000000000000",
@@ -125,7 +135,6 @@ h[:response]=<<EOD
                         "uuid": "11111111-2222-3333-0000-000000000000",
                         "name": "sample 1"
                     },
-                    "quantity": 5,
                     "type": "DNA",
                     "unit": "mole"
                     }
@@ -144,16 +153,15 @@ h[:response]=<<EOD
                 "aliquots": [
                     { "sample": {
                         "actions": {
-                            "read": "/11111111-2222-3333-0000-000000111111",
-                            "create": "/11111111-2222-3333-0000-000000111111",
-                            "update": "/11111111-2222-3333-0000-000000111111",
-                            "delete": "/11111111-2222-3333-0000-000000111111"
+                            "read": "/11111111-2222-3333-0000-111111111111",
+                            "create": "/11111111-2222-3333-0000-111111111111",
+                            "update": "/11111111-2222-3333-0000-111111111111",
+                            "delete": "/11111111-2222-3333-0000-111111111111"
                         },
-                        "uuid": "11111111-2222-3333-0000-000000111111",
-                        "name": "sample 1"
+                        "uuid": "11111111-2222-3333-0000-111111111111",
+                        "name": "sample 2"
                     },
-                    "quantity": 5,
-                    "type": "DNA",
+                    "type": "RNA",
                     "unit": "mole"
                     }
                 ]
