--- a/spec/requests/apiary/4_tube_rack_resource/3_create_a_new_tube_rack_and_add_it_multipe_tubes.json.erb
+++ b/spec/requests/apiary/4_tube_rack_resource/3_create_a_new_tube_rack_and_add_it_multipe_tubes.json.erb
@@ -11,13 +11,22 @@ EOD
 h[:method] = "POST"
 h[:url]='/tube_racks'
 h[:header] << 'Accept: application/json'
+h[:setup]=<<EOD
+sample1 = Lims::Core::Laboratory::Sample.new(:name => 'sample 1')
+sample2 = Lims::Core::Laboratory::Sample.new(:name => 'sample 2')
+tube1 = Lims::Core::Laboratory::Tube.new << Lims::Core::Laboratory::Aliquot.new(:quantity => 5, :type => "NA", :sample => sample1)
+tube2 = Lims::Core::Laboratory::Tube.new << Lims::Core::Laboratory::Aliquot.new(:quantity => 10, :type => "RNA", :sample => sample2)
+
+save_with_uuid sample1 => [1,2,3,0,0], sample2 => [1,2,3,0,1], tube1 => [1,2,3,4,1], tube2 => [1,2,3,4,2]
+set_uuid_start(1,2,3,4,7)
+EOD
 h[:parameters]=<<EOD
 { "tube_rack": {
     "number_of_rows": 8,
     "number_of_columns": 12,
     "tubes": {
-        "A1": "11111111-2222-3333-4444-555555555555",
-        "E5": "11111111-2222-3333-4444-666666666666"
+        "A1": "11111111-2222-3333-4444-111111111111",
+        "E5": "11111111-2222-3333-4444-222222222222"
     }
 } }
 EOD
@@ -37,12 +46,12 @@ h[:response]=<<EOD
     "tubes": {
         "A1": {
             "actions": {
-                "create": "/11111111-2222-3333-4444-555555555555",
-                "read": "/11111111-2222-3333-4444-555555555555",
-                "update": "/11111111-2222-3333-4444-555555555555",
-                "delete": "/11111111-2222-3333-4444-555555555555"
+                "create": "/11111111-2222-3333-4444-111111111111",
+                "read": "/11111111-2222-3333-4444-111111111111",
+                "update": "/11111111-2222-3333-4444-111111111111",
+                "delete": "/11111111-2222-3333-4444-111111111111"
             },
-            "uuid": "11111111-2222-3333-4444-555555555555",
+            "uuid": "11111111-2222-3333-4444-111111111111",
             "type": null,
             "max_volume": null,
             "aliquots": [
@@ -65,24 +74,24 @@ h[:response]=<<EOD
         },
         "E5": {
             "actions": {
-                "read": "/11111111-2222-3333-4444-666666666666",
-                "create": "/11111111-2222-3333-4444-666666666666",
-                "update": "/11111111-2222-3333-4444-666666666666",
-                "delete": "/11111111-2222-3333-4444-666666666666"
+                "read": "/11111111-2222-3333-4444-222222222222",
+                "create": "/11111111-2222-3333-4444-222222222222",
+                "update": "/11111111-2222-3333-4444-222222222222",
+                "delete": "/11111111-2222-3333-4444-222222222222"
             },
-            "uuid": "11111111-2222-3333-4444-666666666666",
+            "uuid": "11111111-2222-3333-4444-222222222222",
             "type": null,
             "max_volume": null,
             "aliquots": [
                 {
                     "sample": {
                         "actions": {
-                            "read": "/11111111-2222-3333-0000-000000111111",
-                            "create": "/11111111-2222-3333-0000-000000111111",
-                            "update": "/11111111-2222-3333-0000-000000111111",
-                            "delete": "/11111111-2222-3333-0000-000000111111"
+                            "read": "/11111111-2222-3333-0000-111111111111",
+                            "create": "/11111111-2222-3333-0000-111111111111",
+                            "update": "/11111111-2222-3333-0000-111111111111",
+                            "delete": "/11111111-2222-3333-0000-111111111111"
                         },
-                        "uuid": "11111111-2222-3333-0000-000000111111",
+                        "uuid": "11111111-2222-3333-0000-111111111111",
                         "name": "sample 2"
                     },
                     "quantity": 10,
