--- a/spec/requests/apiary/4_tube_rack_resource/5transfer_tubes_content.json.erb
+++ b/spec/requests/apiary/4_tube_rack_resource/5transfer_tubes_content.json.erb
@@ -2,8 +2,8 @@
 require 'json'
 h={:header => [], :response_header => [] }
 h[:description]=<<EOD
-**Transfer tubes content from a source tube rack to a target tube rack according to a transfer map.** 
-As it is a content transfer between tubes in tube racks, targeted locations mentionned in the transfer map 
+**Transfer tubes content from a source tube rack to a target tube rack according to a transfer map.**
+As it is a content transfer between tubes in tube racks, targeted locations mentioned in the transfer map
 need to contain tubes.
 
 * `source_uuid` uuid of the source tube rack
@@ -17,6 +17,17 @@ EOD
 h[:method] = "POST"
 h[:url]='/actions/tube_rack_transfer'
 h[:header] << 'Accept: application/json'
+h[:setup]=<<EOD
+sample1 = Lims::Core::Laboratory::Sample.new(:name => 'sample 1')
+source_tube1 = Lims::Core::Laboratory::Tube.new << Lims::Core::Laboratory::Aliquot.new(:quantity => 10, :type => "sample", :sample => sample1)
+target_tube1 = Lims::Core::Laboratory::Tube.new
+source_tube_rack = Lims::Core::Laboratory::TubeRack.new(:number_of_columns => 12, :number_of_rows => 8)
+target_tube_rack = Lims::Core::Laboratory::TubeRack.new(:number_of_columns => 12, :number_of_rows => 8)
+source_tube_rack["B5"] = source_tube1
+target_tube_rack["C3"] = target_tube1
+
+save_with_uuid sample1 => [1,2,3,4,0], source_tube1 => [1,2,3,4,7], target_tube1 => [1,2,3,4,8], source_tube_rack => [1,2,3,4,5], target_tube_rack => [1,2,3,4,6]
+EOD
 h[:parameters]=<<EOD
 { "tube_rack_transfer": {
     "source_uuid": "11111111-2222-3333-4444-555555555555",
@@ -45,12 +56,12 @@ h[:response]=<<EOD
             "tubes": {
                 "C3": {
                     "actions": {
-                        "read": "/11111111-2222-3333-4444-777777777777",
-                        "create": "/11111111-2222-3333-4444-777777777777",
-                        "update": "/11111111-2222-3333-4444-777777777777",
-                        "delete": "/11111111-2222-3333-4444-777777777777"
+                        "read": "/11111111-2222-3333-4444-888888888888",
+                        "create": "/11111111-2222-3333-4444-888888888888",
+                        "update": "/11111111-2222-3333-4444-888888888888",
+                        "delete": "/11111111-2222-3333-4444-888888888888"
                     },
-                    "uuid": "11111111-2222-3333-4444-777777777777",
+                    "uuid": "11111111-2222-3333-4444-888888888888",
                     "type": null,
                     "max_volume": null,
                     "aliquots": [ 
@@ -129,12 +140,12 @@ h[:response]=<<EOD
         "tubes": {
                 "C3": {
                     "actions": {
-                        "read": "/11111111-2222-3333-4444-777777777777",
-                        "create": "/11111111-2222-3333-4444-777777777777",
-                        "update": "/11111111-2222-3333-4444-777777777777",
-                        "delete": "/11111111-2222-3333-4444-777777777777"
+                        "read": "/11111111-2222-3333-4444-888888888888",
+                        "create": "/11111111-2222-3333-4444-888888888888",
+                        "update": "/11111111-2222-3333-4444-888888888888",
+                        "delete": "/11111111-2222-3333-4444-888888888888"
                     },
-                    "uuid": "11111111-2222-3333-4444-777777777777",
+                    "uuid": "11111111-2222-3333-4444-888888888888",
                     "type": null,
                     "max_volume": null,
                     "aliquots": [ 
