--- a/spec/requests/apiary/8_order_resource/2_create_a_new_order.json.erb
+++ b/spec/requests/apiary/8_order_resource/2_create_a_new_order.json.erb
@@ -14,6 +14,17 @@ EOD
 h[:method] = "POST"
 h[:url]='/orders'
 h[:header] << 'Accept: application/json'
+h[:setup]=<<EOD
+study = Lims::Core::Organization::Study.new
+user = Lims::Core::Organization::User.new
+plate = Lims::Core::Laboratory::Plate.new(:number_of_rows => 8,
+                                    :number_of_columns => 12,
+                                    :type => "stock plate type")
+tube1 = Lims::Core::Laboratory::Tube.new
+tube2 = Lims::Core::Laboratory::Tube.new
+
+save_with_uuid study => [1,2,3,4,7], user => [1,2,3,4,6], plate => [1,2,3,0,1], tube1 => [1,2,3,0,2], tube2 => [1,2,3,0,3]
+EOD
 h[:parameters]=<<EOD
 { "order": {
     "user_uuid": "11111111-2222-3333-4444-666666666666",
@@ -64,11 +75,11 @@ h[:response]=<<EOD
     "state": {},
     "items": {
         "Stock Plate 1": [
-            { "status": "done", "uuid": "11111111-2222-3333-0000-111111111111" }
+            { "status": "done", "batch": null, "uuid": "11111111-2222-3333-0000-111111111111" }
         ],
         "Tube 1": [
-            { "status": "pending", "uuid": "11111111-2222-3333-0000-222222222222" },
-            { "status": "pending", "uuid": "11111111-2222-3333-0000-333333333333" }
+            { "status": "pending", "batch": null, "uuid": "11111111-2222-3333-0000-222222222222" },
+            { "status": "pending", "batch": null, "uuid": "11111111-2222-3333-0000-333333333333" }
         ]
     }
 } }
