--- a/spec/requests/apiary/2_root.json.erb
+++ b/spec/requests/apiary/2_root.json.erb
@@ -313,6 +313,11 @@ h[:response]=<<EOD
              "create": "http://example.org/actions/tube_rack_transfer"
            }
          },
+         "update_batches": {
+           "actions": {
+              "create": "http://example.org/actions/update_batch"
+           }
+         },
          "update_orders": {
            "actions": {
              "create": "http://example.org/actions/update_order"
