--- a/spec/requests/apiary/8_order_resource/4_assign_an_item_to_a_batch.json.erb
+++ b/spec/requests/apiary/8_order_resource/4_assign_an_item_to_a_batch.json.erb
@@ -79,7 +79,8 @@ h[:response]=<<EOD
                      "delete":"/11111111-2222-3333-4444-777777777777"
                   },
                   "uuid":"11111111-2222-3333-4444-777777777777",
-                  "process":"manual extraction"
+                  "process":"manual extraction",
+                  "kit":null
                }
             }
          ]
