Spec load but doesn't pass

--- a/spec/requests/apiary/9_labellable_resource/3_add_multiply_labels_to_an_asset_with_an_existing_label.json.erb
+++ b/spec/requests/apiary/9_labellable_resource/3_add_multiply_labels_to_an_asset_with_an_existing_label.json.erb
@@ -14,9 +14,9 @@ h[:url] = '/actions/create_label'
 h[:header] << 'Accept: application/json'
 h[:setup]=<<EOD
 tube = Lims::Core::Laboratory::Tube.new
-labellable = Lims::Core::Laboratory::Labellable.new(:name => "11111111-2222-3333-4444-000000000000",
+labellable = Lims::Core::Labels::Labellable.new(:name => "11111111-2222-3333-4444-000000000000",
                                                     :type => "resource")
-label = Lims::Core::Laboratory::Labellable::Label.new(:type => "sanger-barcode",
+label = Lims::Core::Labels::Labellable::Label.new(:type => "sanger-barcode",
                                                       :value => "1234-ABC")
 labellable["front barcode"] = label
 
